@@ -92,14 +92,14 @@ $language_data = array (
 
             //Configuration Functions
             '@@DATEFIRST','@@OPTIONS','@@DBTS','@@REMSERVER','@@LANGID','@@SERVERNAME',
-            '@@LANGUAGE','@@SERVICENAME','@@LOCK_TIMEOUT','@@SPID','@@MAX_CONNECTIONS','@@TEXTSIZE',
-            '@@MAX_PRECISION','@@VERSION','@@NESTLEVEL',
+            '@@LANGUAGE','@@SERVICENAME','@@LOCK_TIMEOUT','@@SPID','@@MAX_CONNECTIONS',
+            '@@TEXTSIZE','@@MAX_PRECISION','@@VERSION','@@NESTLEVEL',
 
             //Cursor Functions
             '@@CURSOR_ROWS','@@FETCH_STATUS',
 
             //Date and Time Functions
-            'DATEADD','DATEDIFF','DATENAME','DATEPART','DAY','GETDATE','GETUTCDATE','MONTH','YEAR',
+            'DATEADD','DATEDIFF','DATENAME','DATEPART','GETDATE','GETUTCDATE',
 
             //Mathematical Functions
             'ABS','DEGREES','RAND','ACOS','EXP','ROUND','ASIN','FLOOR','SIGN',
@@ -107,7 +107,7 @@ $language_data = array (
             'POWER','TAN','COT','RADIANS',
 
             //Meta Data Functions
-            'COL_LENGTH','fn_listextendedproperty','COL_NAME','FULLTEXTCATALOGPROPERTY',
+            'COL_LENGTH','COL_NAME','FULLTEXTCATALOGPROPERTY',
             'COLUMNPROPERTY','FULLTEXTSERVICEPROPERTY','DATABASEPROPERTY','INDEX_COL',
             'DATABASEPROPERTYEX','INDEXKEY_PROPERTY','DB_ID','INDEXPROPERTY','DB_NAME',
             'OBJECT_ID','FILE_ID','OBJECT_NAME','FILE_NAME','OBJECTPROPERTY','FILEGROUP_ID',
@@ -115,19 +115,16 @@ $language_data = array (
             'TYPEPROPERTY','FILEPROPERTY',
 
             //Security Functions
-            'fn_trace_geteventinfo','IS_SRVROLEMEMBER','fn_trace_getfilterinfo','SUSER_SID',
-            'fn_trace_getinfo','SUSER_SNAME','fn_trace_gettable','USER_ID','HAS_DBACCESS',
-            'IS_MEMBER',
+            'IS_SRVROLEMEMBER','SUSER_SID','SUSER_SNAME','USER_ID',
+            'HAS_DBACCESS','IS_MEMBER',
 
             //String Functions
-            'ASCII','NCHAR','SOUNDEX','CHAR','PATINDEX','SPACE','CHARINDEX',
-            'REPLACE','STR','DIFFERENCE','QUOTENAME','STUFF','LEFT','REPLICATE',
-            'SUBSTRING','LEN','REVERSE','UNICODE','LOWER','RIGHT','UPPER','LTRIM',
-            'RTRIM',
+            'ASCII','SOUNDEX','PATINDEX','CHARINDEX','REPLACE','STR',
+            'DIFFERENCE','QUOTENAME','STUFF','REPLICATE','SUBSTRING','LEN',
+            'REVERSE','UNICODE','LOWER','UPPER','LTRIM','RTRIM',
 
             //System Functions
-            'APP_NAME','COLLATIONPROPERTY','@@ERROR','fn_helpcollations',
-            'fn_servershareddrives','fn_virtualfilestats','FORMATMESSAGE',
+            'APP_NAME','COLLATIONPROPERTY','@@ERROR','FORMATMESSAGE',
             'GETANSINULL','HOST_ID','HOST_NAME','IDENT_CURRENT','IDENT_INCR',
             'IDENT_SEED','@@IDENTITY','ISDATE','ISNUMERIC','PARSENAME','PERMISSIONS',
             '@@ROWCOUNT','ROWCOUNT_BIG','SCOPE_IDENTITY','SERVERPROPERTY','SESSIONPROPERTY',
@@ -143,7 +140,7 @@ $language_data = array (
 
             //Aggregate functions
             'AVG', 'MAX', 'BINARY_CHECKSUM', 'MIN', 'CHECKSUM', 'SUM', 'CHECKSUM_AGG',
-            'STDEV', 'COUNT', 'STDEVP', 'COUNT_BIG', 'VAR', 'GROUPING', 'VARP'
+            'STDEV', 'COUNT', 'STDEVP', 'COUNT_BIG', 'VAR', 'VARP'
             ),
         3 => array(
             /*
@@ -306,7 +303,7 @@ $language_data = array (
             //Function/sp's higlighted brown.
             'fn_helpcollations', 'fn_listextendedproperty ', 'fn_servershareddrives',
             'fn_trace_geteventinfo', 'fn_trace_getfilterinfo', 'fn_trace_getinfo',
-            'fn_trace_gettable', 'fn_virtualfilestats',
+            'fn_trace_gettable', 'fn_virtualfilestats','fn_listextendedproperty',
             ),
         ),
     'SYMBOLS' => array(
