@@ -16,6 +16,8 @@ Version 1.0.8.4
   -  Added language files
      * FO (abas-ERP) (Tan-Vinh Nguyen)
      * Property Files (Edy Hinzen)
+  -  Improvements to language files (BenBE)
+     * Removed duplicate keywords for T-SQL (BenBE)
 Version 1.0.8.3
   -  Added language files
      * DCS (Stelio Passaris)
